--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ li {
     url(./img/bg.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   width: 100%;
-  height: 600px;
+  height: 950px;
   background-attachment: fixed;
   background-size: cover;
   position: relative;
@@ -61,6 +61,7 @@ li {
   width: 80%;
   display: block;
   margin: auto;
+  /* position: absolute; */
 }
 section {
   padding: 60px 0;
@@ -239,9 +240,8 @@ section {
 }
 
 
-
-@media  screen and (max-widht:1800px){
+@media  screen and (max-width:1400px){
   .banner{
-    height: 900px;
+    height: 600px;
   }
 }
